# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
- [API_PARSER] [CNAPP_WIZ] New collector
### Fixed
- [SCRIPTS] [REFRESH_NIC] Correctly parse complex rc.conf ifconfig entries


## [2.33.1] - 2025-10-29
### Fixed
- [GUI] [FILBEAT] Don't automatically change the 'input logs type' attribute on existing configuration load


## [2.33.0] - 2025-10-24
### Removed
- [HAPROXY] [SPOE] Remove unused configuration files
- [FRONTEND] [FILEBEAT] Prevent possibility to use 'Vendor API' inputs on filebeat Listeners
### Added
- [FRONTEND] [FILEBEAT] Add new inputs for filebeat listeners
### Changed
- [FRONTEND] [GUI] Correctly show 'Log forwarders - parse failure' for Filebeat Listeners
- [API_PARSER] [PERCEPTION_POINT_X_RAY] Add support for case ("ATO") logs
- [FRONTEND] [GUI] Rename "Vendor Specific API" tab to "LOG Settings"
- [HAPROXY] [REDIS-PROXY] Update client/server timeouts for stability
### Fixed
- [API_PARSER] [SENTINEL_ONE] Fix double slashes in URLs
- [FRONTEND] [REDIS] Correctly use the local redis password when set for rsyslog/filebeat configurations
- [FRONTEND] [FILEBEAT] Correctly rebuild rsyslog input configurations when filebeat Listeners are created/updated
- [FRONTEND] [GUI] Correctly save/restore input type/filebeat config when switching modes
- [GUI] [USER_SCOPES] Correctly show the edition page when clicking on a User's Scope configuration


## [2.32.0] - 2025-10-13
### Added
- [FRONTEND] New Rsyslog custom actions
- [API_PARSER] [MESSAGETRACE_O365] New collector
### Changed
- [DEPENDENCIES]
  - msal added -> 1.34.0


## [2.31.0] - 2025-09-12
### Added
- [API_PARSER] [CROWDSTRIKE] Add identities to fetched information
### Changed
- [API_PARSER] [GATEWATCHER_ALERTS] Only fetch at most 1 hour time ranges
### Fixed